add LOCALDEV env variable to docker-compose
closes #59

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -30,4 +30,5 @@ services:
         condition: service_healthy
     environment:
       DEBUG: 1
+      LOCALDEV: 1
       DATABASE_URL: postgres://postgres:postgres@db:5432/postgres
