update hugo theme

--- a/export_base_hugo/config.toml
+++ b/export_base_hugo/config.toml
@@ -10,3 +10,10 @@ theme = "mataroa"
   [outputFormats.RSS]
     mediatype = "application/rss"
     baseName = "rss"
+
+[markup.goldmark.renderer]
+unsafe = true
+
+[markup.highlight]
+noClasses = false
+guessSyntax = true
