--- a/requirements.txt
+++ b/requirements.txt
@@ -8,21 +8,21 @@ asgiref==3.8.1
     # via django
 bleach[css]==6.1.0
     # via -r requirements.in
-django==5.0.7
+django==5.0.8
     # via -r requirements.in
 gunicorn==22.0.0
     # via -r requirements.in
-markdown==3.6
+marko[codehilite]==2.1.2
     # via -r requirements.in
 packaging==24.1
     # via gunicorn
 psycopg2-binary==2.9.9
     # via -r requirements.in
 pygments==2.18.0
-    # via -r requirements.in
+    # via marko
 python-frontmatter==1.1.0
     # via -r requirements.in
-pyyaml==6.0.1
+pyyaml==6.0.2
     # via python-frontmatter
 six==1.16.0
     # via bleach
