--- a/.github/workflows/django-build.yml
+++ b/.github/workflows/django-build.yml
@@ -27,22 +27,21 @@ jobs:
     - uses: actions/checkout@v4
     - name: Set up Python
       uses: actions/setup-python@v4
+    - name: Install the latest version of uv
+      uses: astral-sh/setup-uv@v6
       with:
-        python-version: '3.11'
+        enable-cache: true
     - name: Install Dependencies
       run: |
-        python -m pip install --upgrade pip
-        pip install -r requirements.txt
+        uv sync --locked
     - name: Run Tests
       run: |
-        python manage.py collectstatic --noinput
-        DEBUG=1 python manage.py test
+        uv run manage.py collectstatic --noinput
+        DEBUG=1 uv run manage.py test
       env:
         SECRET_KEY: 'thisisthesecretkey'
         DATABASE_URL: 'postgres://postgres:postgres@localhost:5432/postgres'
     - name: Lint
       run: |
         touch .envrc
-        pip install -r requirements.dev.txt
-        pip install -r requirements.txt
-        ruff check .
+        uv run ruff check .
